# duckov-strategy

./: .gitignore  .vercelignore  README.md  next.config.ts  package-lock.json  package.json  proxy.ts
.github/workflows/: build-wasm.yml
app/: globals.css  layout.tsx  page.tsx
app/[locale]/: layout.tsx  page.tsx
app/[locale]/archived/: page.tsx
app/[locale]/buffs/: page.tsx
app/[locale]/inventory/: page.tsx
app/[locale]/maps/: page.tsx
app/[locale]/monsters/: page.tsx
app/[locale]/quests/: page.tsx
app/actions/: cookies.ts
app/components/: ArchiveUpload.tsx  Header.tsx  I18nProvider.tsx  ItemCard.tsx  LanguageSwitcher.tsx  MonsterCard.tsx  Pagination.tsx  SearchFilter.tsx  ThemeSwitcher.tsx
app/constants/: common.ts
app/hooks/: useWasm.ts
app/i18n/: client.ts  config.ts  routing.ts  server.ts
app/inventory/: page.tsx
app/inventory/[id]/: page.tsx
app/monsters/: page.tsx
app/quests/: page.tsx
app/types/: buff.ts  game.ts  item.ts  monster.ts
app/utils/: request.ts  wasm-manager.ts
public/: game_assets.json  items.json  loot.json  quest.json
public/language/chinesesimplified/: Buffs.txt  Characters_PlaceHolder.txt  Items_PlaceHolder.txt  Tags_PlaceHolder.txt
public/language/chinesetraditional/: Buffs.txt  Characters_PlaceHolder.txt  Tags_PlaceHolder.txt
public/language/english/: Buffs.txt  Characters.txt  Items.txt  Tags.txt
public/prefabs/: 0.prefab  1055.prefab  1056.prefab  1057.prefab  1058.prefab  1059.prefab  1060.prefab  1061.prefab  1089.prefab  1097.prefab  1098.prefab  1099.prefab  11.prefab  1100.prefab  1101.prefab  1102.prefab  1103.prefab  1104.prefab  1105.prefab  1106.prefab  1107.prefab  1108.prefab  1109.prefab  111.prefab  1110.prefab  1111.prefab  1112.prefab  1113.prefab  1114.prefab  1115.prefab  1116.prefab  1117.prefab  1118.prefab  1119.prefab  1120.prefab  1121.prefab  1122.prefab  1123.prefab  1124.prefab  1125.prefab  (+506 more)
savefile-parse/: Cargo.toml
savefile-parse/pkg/: package.json  savefile_parse.d.ts  savefile_parse.js  savefile_parse_bg.wasm  savefile_parse_bg.wasm.d.ts
savefile-parse/src/: lib.rs
src/i18n/: request.ts
wgpu-renderer/: .env  Cargo.toml  build.rs  readme.md
wgpu-renderer/pkg/: README.md  package.json  wgpu_renderer.d.ts  wgpu_renderer.js  wgpu_renderer_bg.wasm.d.ts
wgpu-renderer/src/: camera.rs  entity.rs  frustum.rs  lib.rs  light.rs  main.rs  map.rs  materials.rs  mesh.rs  queries.rs  ray.rs  resource.rs  scene.rs  shader.wgsl  stat.rs  unity.rs  utils.rs
(+15 files in other folders)
