[package]
name = "wgpu-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
winit = { version = "0.30.12", features = ["android-native-activity"] }
env_logger = "0.11.8"
log = "0.4.28"
wgpu = "27.0.1"
pollster= "0.4.0"
cgmath = "0.18.0"
bytemuck = {version = "1.24.0", features = ["derive"]}
fs_extra={version = "1.3.0"}
cfg-if = {version = "1.0.4"}
reqwest = "0.12.24"
gltf={version = "1.4.1"}
wasm-bindgen = "0.2.105"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.30"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
reqwest = { version = "0.11" }
wgpu = {version = "27.0.1", features = ["webgl"]}
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location"
]}

[lib]
crate-type = ["cdylib", "rlib"]