[package]
name = "wgpu-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
winit = { version = "0.30.12", features = ["android-native-activity"] }
env_logger = "0.11.8"
log = "0.4.28"
wgpu = "27.0.1"
pollster= "0.4.0"
cgmath = {version = "0.18.0", features = ["serde"]}
bytemuck = {version = "1.24.0", features = ["derive"]}
fs_extra={version = "1.3.0"}
cfg-if = {version = "1.0.4"}
serde_yaml = { version = "0.9.34+deprecated"}
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
half = { version = "2.7.1", features = ["bytemuck"] }
hex = "0.4.3"
web-sys = "0.3.82"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1.0"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.30"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
reqwest = { version = "0.12.24", features = ["json"], default-features = false }
wgpu = {version = "27.0.1", features = ["webgl"]}
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location"
]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dotenv = "0.15.0"
#reqwest = { version = "0.12.24", features = ["json", "blocking"] }

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
